# OR4CLE

./: CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
datasets/synthetic_networks/: metadata.json
datasets/synthetic_networks/snapshots/: snapshot_001_2000-01.npz  snapshot_002_2000-02.npz  snapshot_003_2000-03.npz  snapshot_004_2000-04.npz  snapshot_005_2000-05.npz  snapshot_006_2000-06.npz  snapshot_007_2000-07.npz  snapshot_008_2000-08.npz  snapshot_009_2000-09.npz  snapshot_010_2000-10.npz  snapshot_011_2000-11.npz  snapshot_012_2000-12.npz  snapshot_013_2001-01.npz  snapshot_014_2001-02.npz  snapshot_015_2001-03.npz  snapshot_016_2001-04.npz  snapshot_017_2001-05.npz  snapshot_018_2001-06.npz  snapshot_019_2001-07.npz  snapshot_020_2001-08.npz  snapshot_021_2001-09.npz  snapshot_022_2001-10.npz  snapshot_023_2001-11.npz  snapshot_024_2001-12.npz  snapshot_025_2002-01.npz  snapshot_026_2002-02.npz  snapshot_027_2002-03.npz  snapshot_028_2002-04.npz  snapshot_029_2002-05.npz  snapshot_030_2002-06.npz  snapshot_031_2002-07.npz  snapshot_032_2002-08.npz  snapshot_033_2002-09.npz  snapshot_034_2002-10.npz  snapshot_035_2002-11.npz  snapshot_036_2002-12.npz  snapshot_037_2003-01.npz  snapshot_038_2003-02.npz  snapshot_039_2003-03.npz  snapshot_040_2003-04.npz  (+60 more)
docs/: api_quick_reference.md  math.md  usage.md
notebooks/: or4cle_minimal_synthetic_test.ipynb
src/or4cle/: BERM_solver.py  BFM_solver.py  __init__.py  dcGM_solver.py  prior_test.py  utils.py
tests/: test_bfm_berm_gh.py
(+10 files in other folders)
